data/derived/sp14/progs/unify/prog2484.ml.out
Characters 61-77:
  | n -> ((n mod 10)::ns)
         ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
